--- a/thesis/frontmatter.tex
+++ b/thesis/frontmatter.tex
@@ -34,15 +34,13 @@
     in the thesis where my contributions are specified in this Statement of
     Contribution.
 
-    Title and authors: ...
+    \begin{itemize}
+      \item \emph{Radio Galaxy Zoo: Machine learning for radio source host galaxy cross-identification}, by \textbf{M. J. Alger}, J. K. Banfield, C. S. Ong, L. Rudnick, O. I. Wong, C. Wolf, H. Andernach, R. P. Norris, and S. S. Shabala. Published in 2018 in the \emph{Monthly Notices of the Royal Astronomy Society}.
+      \item \emph{Radio Galaxy Zoo: Radio luminosity functions of extended sources}, by \textbf{M. J. Alger}, O. I. Wong, C. S. Ong, N. M. McClure-Griffiths, H. Andernach, L. Rudnick, S. S. Shabala, A. F. Garon, J. K. Banfield, A. D. Kapi\'nska, and R. P. Norris. Not yet submitted.
+      \item \emph{Interpretable Faraday Complexity Classification}, by \textbf{M. J. Alger}, C. S. Ong, N. M. McClure-Griffiths, J. D. Livingston, O. I. Wong, and J. L. Nabaglo. Not yet submitted.
+    \end{itemize}
 
-    Current status of paper: (Not Yet Submitted/Submitted/Under Revision/Accepted/Published)
-
-    Contribution to paper: ...
-
-    Senior author or collaborating authors endorsement: ...
-
-    [repeat for each paper]
+    Senior author or collaborating authors endorsement:
 
 \vspace*{4cm}
 
