--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -2145,12 +2145,11 @@ presented. A list of types and a summary of the phenomenology of the quiets, a d
 	shorttitle = {{UNDERSTANDING} {GIANT} {RADIO} {GALAXY} {J1420}–0545},
 	url = {https://iopscience.iop.org/article/10.1088/0004-637X/740/2/58},
 	doi = {10.1088/0004-637X/740/2/58},
-	abstract = {In this paper, we consider the possibility that the structure of the largest radio galaxy J1420–0545 is formed by restarted rather than primary jet activity. This hypothesis is motivated by the unusual morphological properties of the source, suggesting almost ballistic propagation of powerful jets in a particularly low-density environment. New radio observations of J1420–0545 confirm its morphology, which consists of only two narrow lobes; no trace of any outer low-density cavity due to the previous jet activity is therefore detected. Different model fits performed using the newly accessed radio data imply a relatively young age of the source, exceptionally high expansion velocity, a large jet kinetic power, and confirm and particularly low-density environment. We find that it is possible to choose a realistic set of the model parameters for which the hypothetical outer lobes of J1420–0545 are old enough such that their expected radio surface brightness is substantially below the rms noise level of the available radio maps. On the other hand, the extremely low density of the gas surrounding the J1420–0545 lobes is consistent with the mean density of the baryonic matter in the universe. This suggests that the source may be instead located in a real void of the galaxy and matter distribution. In both cases, the giant radio lobes of J1420–0545 are expected to substantially modify the surrounding matter by driving strong shocks and heating the gas located at the outskirts of the filamentary galactic distribution. Finally, we also find that the energetic requirements for the source are severe in terms of the total jet power and the total energy deposited by the outflows far away from the central engine.},
 	language = {en},
 	number = {2},
 	urldate = {2020-07-03},
 	journal = {The Astrophysical Journal},
-	author = {Machalski, J. and Jamrozy, M. and Stawarz, {\textbackslash}L and Kozie{\textbackslash}l-Wierzbowska, D.},
+	author = {Machalski, J. and Jamrozy, M. and Stawarz, L and Koziel-Wierzbowska, D.},
 	month = sep,
 	year = {2011},
 	pages = {58},
@@ -2275,4 +2274,287 @@ Section: Investigations},
 	year = {2020},
 	doi = {10.1017/9781108679930},
 	file = {Deisenroth et al. - 2020 - Mathematics for Machine Learning.pdf:C\:\\Users\\matthew\\Zotero\\storage\\NXW9HYY6\\Deisenroth et al. - 2020 - Mathematics for Machine Learning.pdf:application/pdf}
+}
+
+@article{bell_estimating_2003,
+	title = {Estimating {Star} {Formation} {Rates} from {Infrared} and {Radio} {Luminosities}: {The} {Origin} of the {Radio}‐{Infrared} {Correlation}},
+	volume = {586},
+	issn = {0004-637X, 1538-4357},
+	shorttitle = {Estimating {Star} {Formation} {Rates} from {Infrared} and {Radio} {Luminosities}},
+	url = {https://iopscience.iop.org/article/10.1086/367829},
+	doi = {10.1086/367829},
+	abstract = {I have assembled a diverse sample of galaxies from the literature with far-ultraviolet (FUV), optical, infrared (IR), and radio luminosities to explore the calibration of radio-derived and IR-derived star formation (SF) rates and the origin of the radio-IR correlation. By comparing the 8–1000 lm IR, which samples dustreprocessed starlight, with direct stellar FUV emission, I show that the IR traces most of the SF in luminous \$L* galaxies but traces only a small fraction of the SF in faint \$0.01L* galaxies. If radio emission were a perfect SF rate indicator, this eﬀect would cause easily detectable curvature in the radio-IR correlation. Yet, the radio-IR correlation is nearly linear. This implies that the radio ﬂux from low-luminosity galaxies is substantially suppressed, compared to brighter galaxies. This is naturally interpreted in terms of a decreasing eﬃciency of nonthermal radio emission in faint galaxies. Thus, the linearity of the radio-IR correlation is a conspiracy: both indicators underestimate the SF rate at low luminosities. SF rate calibrations that take into account this eﬀect are presented, along with estimates of the random and systematic error associated with their use.},
+	language = {en},
+	number = {2},
+	urldate = {2020-07-12},
+	journal = {The Astrophysical Journal},
+	author = {Bell, Eric F.},
+	month = apr,
+	year = {2003},
+	pages = {794--813},
+	file = {Bell - 2003 - Estimating Star Formation Rates from Infrared and .pdf:C\:\\Users\\matthew\\Zotero\\storage\\I7EHZFDL\\Bell - 2003 - Estimating Star Formation Rates from Infrared and .pdf:application/pdf}
+}
+
+@article{condon_radio_1992,
+	title = {Radio emission from normal galaxies},
+	volume = {30},
+	issn = {0066-4146},
+	url = {http://adsabs.harvard.edu/abs/1992ARA%26A..30..575C},
+	doi = {10.1146/annurev.aa.30.090192.003043},
+	urldate = {2020-07-12},
+	journal = {Annual Review of Astronomy and Astrophysics},
+	author = {Condon, J. J.},
+	year = {1992},
+	keywords = {Synchrotron Radiation, Black Holes (Astronomy), Cosmic Rays, H Ii Regions, Infrared Radiation, Radio Emission, Radio Sources (Astronomy), Relativistic Particles, Star Formation, Starburst Galaxies},
+	pages = {575--611},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\R9LVKT6M\\Condon - 1992 - Radio emission from normal galaxies.pdf:application/pdf}
+}
+
+@article{norris_emu_2011,
+	title = {{EMU}: {Evolutionary} {Map} of the {Universe}},
+	volume = {28},
+	issn = {1323-3580},
+	shorttitle = {{EMU}},
+	url = {http://adsabs.harvard.edu/abs/2011PASA...28..215N},
+	doi = {10.1071/AS11021},
+	abstract = {EMU is a wide-field radio continuum survey planned for the new Australian Square Kilometre Array Pathfinder (ASKAP) telescope. The primary goal of EMU is to make a deep (rms {\textasciitilde}10μJy/beam) radio
+continuum survey of the entire Southern sky at 1.3GHz, extending as far North as +30° declination, with a resolution of 10arcsec. EMU is expected to detect and catalogue about 70million galaxies, including typical star-forming galaxies up to z{\textasciitilde}1, powerful starbursts to even greater redshifts, and active galactic nuclei to the edge of the visible Universe. It will undoubtedly discover new classes of object. This paper defines the science goals and parameters of the survey, and describes the development of techniques necessary to maximise the science return from EMU.},
+	urldate = {2020-07-12},
+	journal = {Publications of the Astronomical Society of Australia},
+	author = {Norris, Ray P. and Hopkins, A. M. and Afonso, J. and Brown, S. and Condon, J. J. and Dunne, L. and Feain, I. and Hollow, R. and Jarvis, M. and Johnston-Hollitt, M. and Lenc, E. and Middelberg, E. and Padovani, P. and Prandoni, I. and Rudnick, L. and Seymour, N. and Umana, G. and Andernach, H. and Alexander, D. M. and Appleton, P. N. and Bacon, D. and Banfield, J. and Becker, W. and Brown, M. J. I. and Ciliegi, P. and Jackson, C. and Eales, S. and Edge, A. C. and Gaensler, B. M. and Giovannini, G. and Hales, C. A. and Hancock, P. and Huynh, M. T. and Ibar, E. and Ivison, R. J. and Kennicutt, R. and Kimball, Amy E. and Koekemoer, A. M. and Koribalski, B. S. and López-Sánchez, Á. R. and Mao, M. Y. and Murphy, T. and Messias, H. and Pimbblet, K. A. and Raccanelli, A. and Randall, K. E. and Reiprich, T. H. and Roseboom, I. G. and Röttgering, H. and Saikia, D. J. and Sharp, R. G. and Slee, O. B. and Smail, Ian and Thompson, M. A. and Urquhart, J. S. and Wall, J. V. and Zhao, G.-B.},
+	month = aug,
+	year = {2011},
+	keywords = {galaxies: evolution, surveys, radio continuum: general, cosmology: observations, galaxies: formation, stars: activity, telescopes},
+	pages = {215--248},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\8K6QE9JD\\Norris et al. - 2011 - EMU Evolutionary Map of the Universe.pdf:application/pdf}
+}
+
+@article{wilson_difference_1995,
+	title = {The difference between radio-loud and radio-quiet active galaxies},
+	volume = {438},
+	issn = {0004-637X},
+	url = {http://adsabs.harvard.edu/abs/1995ApJ...438...62W},
+	doi = {10.1086/175054},
+	abstract = {The recent development of unified theories of active galactic nuclei (AGNs) has indicated that there are two physically distinct classes of these objects--radio-loud and radio-quiet. Despite differences, the (probable) thermal emissions from the AGNs (continua and lines from X-ray to infrared wavelengths) are quite similar to the two classes of object. We argue that this last result suggests that the black hole masses and mass accretion rates in the two classes are not greatly different, and that the difference between the classes is associated with the spin of the black hole. We assume that the normal process of accretion through a disk does not lead to rapidly spinning holes and propose that galaxies (e.g., spirals) which have not suffered a recent major merger event contain nonrotating or only slowly rotating black holes. When two such galaxies merge, the two black holes are known to form a binary and we assume that they eventually coalesce. The ratio of the number of radio-loud to radio-quiet AGNs at a given thermal (e.g., optical) luminosity is determined by the galaxy merger rate. Comparisons between the predicted and observed radio luminosity functions constrain the efficiencies with which jet power is extracted from the spinning hole and radio emission is produced by the jet.},
+	urldate = {2020-07-12},
+	journal = {The Astrophysical Journal},
+	author = {Wilson, A. S. and Colbert, E. J. M.},
+	month = jan,
+	year = {1995},
+	keywords = {Active Galactic Nuclei, Quasars, Black Holes (Astronomy), Cosmology, Interacting Galaxies, Luminosity, Radio Astronomy, Radio Jets (Astronomy)},
+	pages = {62--71},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\3YHXGD4M\\Wilson and Colbert - 1995 - The difference between radio-loud and radio-quiet .pdf:application/pdf}
+}
+
+@article{groves_distinguishing_2007,
+	title = {Distinguishing {Active} {Galactic} {Nuclei} and {Star} {Formation}},
+	url = {http://arxiv.org/abs/0707.0158},
+	abstract = {Using the large emission line galaxy sample from the Sloan Digital Sky Survey we show that Star forming galaxies, Seyferts, and low-ionization nuclear emission-line regions (LINERs) form clearly separated branches on the standard optical diagnostic diagrams. We derive a new empirical classiﬁcation scheme which cleanly separates these emission-line galaxies, using strong optical emission lines. Using this classiﬁcation we identify a few distinguishing host galaxy properties of each class, which, along with the emission line analysis, suggest continuous evolution from one class to another. As a ﬁnal note, we introduce models of both Starforming galaxies and AGN narrow line regions which can explain the distribution of galaxies on standard emission line ratio diagrams, and possibly suggest new diagnostics across the emission spectrum.},
+	language = {en},
+	urldate = {2020-07-12},
+	journal = {arXiv:0707.0158 [astro-ph]},
+	author = {Groves, Brent and Kewley, Lisa},
+	month = jul,
+	year = {2007},
+	note = {arXiv: 0707.0158},
+	keywords = {Astrophysics},
+	file = {Groves and Kewley - 2007 - Distinguishing Active Galactic Nuclei and Star For.pdf:C\:\\Users\\matthew\\Zotero\\storage\\94YS4CVP\\Groves and Kewley - 2007 - Distinguishing Active Galactic Nuclei and Star For.pdf:application/pdf}
+}
+
+@article{groves_distinguishing_2008,
+	title = {Distinguishing {Active} {Galactic} {Nuclei} and {Star} {Formation}},
+	volume = {390},
+	url = {http://adsabs.harvard.edu/abs/2008ASPC..390..283G},
+	abstract = {Using the large emission-line galaxy sample from the Sloan Digital Sky Survey we show that star-forming galaxies, Seyferts, and low ionization nuclear emission-line regions (LINERs) form clearly separated branches on the standard optical diagnostic diagrams. We derive a new empirical classification scheme that cleanly separates these emission-line galaxies, using strong optical emission lines. Using this
+classification, we identify a few distinguishing host galaxy properties in each class, which, along with the emission-line analysis, suggest continuous evolution from one class to another. As a final note, we introduce models of both star-forming galaxies and AGN narrow-line regions that can explain the distribution of galaxies on standard emission-line ratio diagrams and possibly suggest new diagnostics across the emission spectrum.},
+	urldate = {2020-07-12},
+	author = {Groves, B. and Kewley, L.},
+	month = jun,
+	year = {2008},
+	note = {Conference Name: Pathways Through an Eclectic Universe
+Place: eprint: arXiv:0707.0158},
+	pages = {283},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\YNYB37GN\\Groves and Kewley - 2008 - Distinguishing Active Galactic Nuclei and Star For.pdf:application/pdf}
+}
+
+@article{garon_radio_2019,
+	title = {Radio {Galaxy} {Zoo}: {The} {Distortion} of {Radio} {Galaxies} by {Galaxy} {Clusters}},
+	volume = {157},
+	issn = {0004-6256},
+	shorttitle = {Radio {Galaxy} {Zoo}},
+	url = {http://adsabs.harvard.edu/abs/2019AJ....157..126G},
+	doi = {10.3847/1538-3881/aaff62},
+	abstract = {We study the impact of cluster environment on the morphology of a sample of 4304 extended radio galaxies from Radio Galaxy Zoo. A total of 87\% of the sample lies within a projected 15 Mpc of an optically identified cluster. Brightest cluster galaxies (BCGs) are more likely than other cluster members to be radio sources, and are also moderately bent. The surface density as a function of separation from cluster center of non-BCG radio galaxies follows a power law with index -1.10 ±
+0.03 out to 10 r 500 (∼7 Mpc), which is steeper than the corresponding distribution for optically selected galaxies. Non-BCG radio galaxies are statistically more bent the closer they are to the cluster center. Within the inner 1.5 r 500 (∼1 Mpc) of a cluster, non-BCG radio galaxies are statistically more bent in high-mass clusters than in low-mass clusters. Together, we find that non-BCG sources are statistically more bent in environments that exert greater ram pressure. We use the orientation of bent radio galaxies as an indicator of galaxy orbits and find that they are preferentially in radial orbits. Away from clusters, there is a large population of bent radio galaxies, limiting their use as cluster locators; however, they are still located within statistically overdense regions. We investigate the asymmetry in the tail length of sources that have their tails aligned along the radius vector from the cluster center, and find that the length of the inward-pointing tail is weakly suppressed for sources close to the center of the cluster.},
+	urldate = {2020-07-13},
+	journal = {The Astronomical Journal},
+	author = {Garon, Avery F. and Rudnick, Lawrence and Wong, O. Ivy and Jones, Tom W. and Kim, Jin-Ah and Andernach, Heinz and Shabala, Stanislav S. and Kapińska, Anna D. and Norris, Ray P. and de Gasperin, Francesco and Tate, Jean and Tang, Hongming},
+	month = mar,
+	year = {2019},
+	keywords = {galaxies: clusters: intracluster medium, radio continuum: galaxies},
+	pages = {126},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\Q4CKBREJ\\Garon et al. - 2019 - Radio Galaxy Zoo The Distortion of Radio Galaxies.pdf:application/pdf}
+}
+
+@misc{noauthor_reference_nodate,
+	title = {Reference {Lookup} {\textbar} {NASA}/{IPAC} {Extragalactic} {Database}},
+	url = {https://ned.ipac.caltech.edu/reflookup?refcode=1986MNRAS.222..753L},
+	urldate = {2020-07-13},
+	file = {Reference Lookup | NASA/IPAC Extragalactic Database:C\:\\Users\\matthew\\Zotero\\storage\\IB86CCBW\\reflookup.html:text/html}
+}
+
+@misc{leahy_atlas_nodate,
+	title = {An {Atlas} of {DRAGNs}},
+	url = {http://www.jb.man.ac.uk/atlas/index.html},
+	abstract = {We present radio images and other data for the nearest 85 DRAGNs (radio galaxies and related objects) in the so-called "3CRR" sample of Laing, Riley \& Longair (1983).},
+	urldate = {2020-06-13},
+	author = {Leahy, J. P. and Bridle, A. H. and Strom, R. G.}
+}
+
+@article{leahy_polarization_1986,
+	title = {The polarization of classical double-radio sources},
+	volume = {222},
+	issn = {0035-8711},
+	url = {http://adsabs.harvard.edu/abs/1986MNRAS.222..753L},
+	doi = {10.1093/mnras/222.4.753},
+	abstract = {The polarization of 31 bright radio sources is studied at four wavelengths with high sensitivity and at arcsec resolution. The
+objectives were to determine accurately the distribution of rotation measure (RM); to study the magnetic-field structures in the faint regions of the sources; and to investigate the contribution of the Galactic foreground to the observed RM structures. The magnetic field lines follow the contours of total intensity and are either parallel or perpendicular to ridge lines. This behavior can be explained by a model in which the field is aligned by the shear and compression of a
+supersonic jet excavating a cavity in a much denser medium. There tend to be larger variations in RM in the most luminous sources. At high Galactic latitudes the RM structure is on scales comparable with the beam (typically 5 arcsec). RM variations are usually larger on the brighter side of the source.},
+	urldate = {2020-07-13},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	author = {Leahy, J. P. and Pooley, G. G. and Riley, J. M.},
+	month = oct,
+	year = {1986},
+	keywords = {Astronomical Models, Extragalactic Radio Sources, Galactic Rotation, Interstellar Magnetic Fields, Polarized Electromagnetic Radiation, Quasars, Radio Galaxies, Radio Jets (Astronomy), Radio Sources (Astronomy)},
+	pages = {753--785},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\9DQLPFR4\\Leahy et al. - 1986 - The polarization of classical double-radio sources.pdf:application/pdf}
+}
+
+@article{rodman_radio_2019,
+	title = {Radio {Galaxy} {Zoo}: observational evidence for environment as the cause of radio source asymmetry},
+	volume = {482},
+	issn = {0035-8711},
+	shorttitle = {Radio {Galaxy} {Zoo}},
+	url = {http://adsabs.harvard.edu/abs/2019MNRAS.482.5625R},
+	doi = {10.1093/mnras/sty3070},
+	abstract = {We investigate the role of environment on radio galaxy properties by 
+constructing a sample of large (≳100 kpc), nearby (z {\textless} 0.3)
+radio sources identified as part of the Radio Galaxy Zoo citizen science
+project. Our sample consists of 16 Fanaroff-Riley Type II (FR-II)
+sources, 6 FR-I sources, and 1 source with a hybrid morphology. FR-I
+sources appear to be hosted by more massive galaxies, consistent with
+previous studies. In the FR-II sample, we compare the degree of
+asymmetry in radio lobe properties to asymmetry in the radio source
+environment, quantified through optical galaxy clustering. We find that
+the length of radio lobes in FR-II sources is anticorrelated with both
+galaxy clustering and lobe luminosity. These results are in quantitative
+agreement with predictions from radio source dynamical models and
+suggest that galaxy clustering provides a useful proxy for the ambient
+gas density distribution encountered by the radio lobes.},
+	urldate = {2020-07-13},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	author = {Rodman, P. E. and Turner, R. J. and Shabala, S. S. and Banfield, J. K. and Wong, O. I. and Andernach, H. and Garon, A. F. and Kapińska, A. D. and Norris, R. P. and Rudnick, L.},
+	month = feb,
+	year = {2019},
+	keywords = {galaxies: active, galaxies: jets, radio continuum: galaxies},
+	pages = {5625--5641},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\W8TNJAH7\\Rodman et al. - 2019 - Radio Galaxy Zoo observational evidence for envir.pdf:application/pdf}
+}
+
+@article{banfield_radio_2016,
+	title = {Radio {Galaxy} {Zoo}: discovery of a poor cluster through a giant wide-angle tail radio galaxy},
+	volume = {460},
+	issn = {0035-8711},
+	shorttitle = {Radio {Galaxy} {Zoo}},
+	url = {http://adsabs.harvard.edu/abs/2016MNRAS.460.2376B},
+	doi = {10.1093/mnras/stw1067},
+	abstract = {We have discovered a previously unreported poor cluster of galaxies 
+(RGZ-CL J0823.2+0333) through an unusual giant wide-angle tail radio
+galaxy found in the Radio Galaxy Zoo project. We obtained a
+spectroscopic redshift of z = 0.0897 for the E0-type host galaxy, 2MASX
+J08231289+0333016, leading to Mr = -22.6 and a 1.4 GHz radio
+luminosity density of L1.4 = 5.5 × 1024 W
+Hz-1. These radio and optical luminosities are typical for
+wide-angle tailed radio galaxies near the borderline between
+Fanaroff-Riley classes I and II. The projected largest angular size of
+≈8 arcmin corresponds to 800 kpc and the full length of the source
+along the curved jets/trails is 1.1 Mpc in projection. X-ray data from
+the XMM-Newton archive yield an upper limit on the X-ray luminosity of
+the thermal emission surrounding RGZ J082312.9+033301 at 1.2-2.6 ×
+1043 erg s-1 for assumed intracluster medium
+temperatures of 1.0-5.0 keV. Our analysis of the environment surrounding
+RGZ J082312.9+033301 indicates that RGZ J082312.9+033301 lies within a
+poor cluster. The observed radio morphology suggests that (a) the host
+galaxy is moving at a significant velocity with respect to an ambient
+medium like that of at least a poor cluster, and that (b) the source may
+have had two ignition events of the active galactic nucleus with
+107 yr in between. This reinforces the idea that an
+association between RGZ J082312.9+033301 and the newly discovered poor
+cluster exists.},
+	urldate = {2020-07-13},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	author = {Banfield, J. K. and Andernach, H. and Kapińska, A. D. and Rudnick, L. and Hardcastle, M. J. and Cotter, G. and Vaughan, S. and Jones, T. W. and Heywood, I. and Wing, J. D. and Wong, O. I. and Matorny, T. and Terentev, I. A. and López-Sánchez, Á. R. and Norris, R. P. and Seymour, N. and Shabala, S. S. and Willett, K. W.},
+	month = aug,
+	year = {2016},
+	keywords = {galaxies: active, galaxies: clusters: individual: RGZ J082312.9+033301, radio continuum: galaxies},
+	pages = {2376--2384},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\4DSZ6URP\\Banfield et al. - 2016 - Radio Galaxy Zoo discovery of a poor cluster thro.pdf:application/pdf}
+}
+
+@article{black_study_1992,
+	title = {A study of {FRII} radio galaxies with {Z} less than 0.15. {I} - {High}-resolution maps of eight sources at 3.6 {CM}},
+	volume = {256},
+	issn = {0035-8711},
+	url = {http://adsabs.harvard.edu/abs/1992MNRAS.256..186B},
+	doi = {10.1093/mnras/256.2.186},
+	abstract = {The paper presents VLA maps of total intensity and fractional 
+polarization at 3.6 cm for eight radio galaxies, part of a sample of 30
+nearby FRII sources with P178 greater than 2 x 10 exp 25 W/Hz
+sr. High-sensitivity images of the hotspots (with resolutions of 0.25
+and 0.75 arcsec and average noise levels of about 30 micro-Jy) show
+strikingly different and complex structures. Jets are found in six of
+the sources.},
+	urldate = {2020-07-13},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	author = {Black, A. R. S. and Baum, S. A. and Leahy, J. P. and Perley, R. A. and Riley, J. M. and Scheuer, P. A. G.},
+	month = may,
+	year = {1992},
+	keywords = {Active Galaxies, Astronomical Maps, Galactic Radio Waves, Radio Astronomy, Radio Galaxies, Radio Jets (Astronomy), Very Large Array (Vla)},
+	pages = {186--208},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\X8L5GJPX\\Black et al. - 1992 - A study of FRII radio galaxies with Z less than 0..pdf:application/pdf}
+}
+
+@article{laing_rotation_1987,
+	title = {Rotation measure variation across {M84}},
+	volume = {228},
+	issn = {0035-8711},
+	url = {http://adsabs.harvard.edu/abs/1987MNRAS.228..557L},
+	doi = {10.1093/mnras/228.3.557},
+	abstract = {VLA images of the linearly polarized emission from the weak radio galaxy M84 (3C 272.1) with 3.9 arcsec resolution at 1.4 and 4.9 GHz show an organized pattern of Faraday rotation measure across the radio source. This pattern implies that there is a magnetoionic medium ≡10 kpc in extent within M84, in front of, but not mixed with, the
+radio-emitting plasma. There must be a large-scale reversal in the magnetic field in this medium across the face of the radio source. The medium may be responsible for the more diffuse component of the X-ray emission from M84, and there is evidence that it is interacting with the outflow in the two radio jets.},
+	urldate = {2020-07-13},
+	journal = {Monthly Notices of the Royal Astronomical Society},
+	author = {Laing, Robert A. and Bridle, Alan H.},
+	month = oct,
+	year = {1987},
+	keywords = {Astrometry, Astronomical Maps, Faraday Effect, Galactic Rotation, Gray Scale, Linear Polarization, Magnetic Fields, Radio Galaxies},
+	pages = {557--571},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\I6NPLIUA\\Laing and Bridle - 1987 - Rotation measure variation across M84.pdf:application/pdf}
+}
+
+@article{leahy_vla_1991,
+	title = {{VLA} images of 23 extragalactic radio sources},
+	volume = {102},
+	issn = {0004-6256},
+	url = {http://adsabs.harvard.edu/abs/1991AJ....102..537L},
+	doi = {10.1086/115892},
+	abstract = {The paper presents radio images at 20 cm of 22 radio galaxies and one quasar made with NRAO Very Large Array. The sources are drawn from the z less than 0.5 subset of the complete radio sample defined by Laing et al. (1983). The images have resolutions of 1.1-5.8 arcsec, chosen to give about 50 beamwidths across each source, and sufficient sampling of the aperture plane to represent accurately the largest-scale structure. With the current images, nearly all members of the Laing et al. sample with z less than 0.5 have high-sensitivity images from the VLA or Westerbork.},
+	urldate = {2020-07-13},
+	journal = {The Astronomical Journal},
+	author = {Leahy, J. P. and Perley, R. A.},
+	month = aug,
+	year = {1991},
+	keywords = {Computer Programs, Gray Scale, Intergalactic Media, Quasars, Radio Astronomy, Radio Galaxies, Radio Sources (Astronomy), Sky Surveys (Astronomy), Very Large Array (Vla)},
+	pages = {537--561},
+	file = {Full Text PDF:C\:\\Users\\matthew\\Zotero\\storage\\5T3PYV8S\\Leahy and Perley - 1991 - VLA images of 23 extragalactic radio sources.pdf:application/pdf}
 }
